; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_pin.c_PinModeGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_pin.c_PinModeGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_ulPinToPadMap = common dso_local global i64* null, align 8
@PAD_CONFIG_BASE = common dso_local global i64 0, align 8
@PAD_MODE_MASK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PinModeGet(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64*, i64** @g_ulPinToPadMap, align 8
  %5 = load i64, i64* %2, align 8
  %6 = and i64 %5, 63
  %7 = getelementptr inbounds i64, i64* %4, i64 %6
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = shl i64 %9, 2
  %11 = load i64, i64* @PAD_CONFIG_BASE, align 8
  %12 = add i64 %10, %11
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = call i64 @HWREG(i64 %13)
  %15 = load i64, i64* @PAD_MODE_MASK, align 8
  %16 = and i64 %14, %15
  ret i64 %16
}

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
